--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-focus-container": "^0.0.1",
     "react-icons": "^3.10.0",
     "react-scripts": "3.4.1",
+    "react-textarea-autosize": "^8.2.0",
     "typescript": "^3.9.7"
   },
   "scripts": {
