--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@types/react-dom": "^16.9.8",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
+    "react-autosize-textarea": "^7.1.0",
     "react-dom": "^16.13.1",
     "react-flexbox-grid": "^2.1.2",
     "react-focus-container": "^0.0.1",
     "react-icons": "^3.10.0",
     "react-scripts": "3.4.1",
     "react-textarea-autosize": "^8.2.0",
+    "react.dom": "^1.0.1",
     "typescript": "^3.9.7"
   },
   "scripts": {
