--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-scripts": "3.4.1",
     "react-textarea-autosize": "^8.2.0",
     "react.dom": "^1.0.1",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.7",
+    "uuid": "^8.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/uuid": "^8.0.0"
   }
 }
