--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-flexbox-grid": "^2.1.2",
     "react-focus-container": "^0.0.1",
     "react-icons": "^3.10.0",
+    "react-linkify": "^1.0.0-alpha",
     "react-scripts": "3.4.1",
     "react-textarea-autosize": "^8.2.0",
     "react.dom": "^1.0.1",
@@ -45,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-linkify": "^1.0.0",
     "@types/uuid": "^8.0.0"
   }
 }
