--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/debounce": "^1.2.0",
     "@types/jest": "^26.0.5",
     "@types/node": "^14.0.23",
     "@types/react": "^16.9.43",
@@ -13,6 +14,7 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-autosize-textarea": "^7.1.0",
+    "react-debounce-input": "^3.2.2",
     "react-dom": "^16.13.1",
     "react-flexbox-grid": "^2.1.2",
     "react-focus-container": "^0.0.1",
